argocd/apps/infra/authentik/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: authentik-app
  name: authentik-http-route
  namespace: authentik
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - authentik.yanello.net
  rules:
  - backendRefs:
    - name: authentik-server
      namespace: authentik
      port: 80
