argocd/apps/infra/authentik/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentik-vs
spec:
  hosts:
  - authentik.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: authentik
        port:
          number: 80
